More on public website, instructions, etc

--- a/views/setup.html
+++ b/views/setup.html
@@ -3,27 +3,67 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Setup | Buycoins Recurring Purchase</title>
+    <title>Setup | BuyCoins Recurring Buy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-
-<main>
     <header>
-        <h1>Buycoins Recurring Purchase</h1>
-        <a href="/">Back home</a>
+        <div class="container">
+            <h1>
+                <a href="/">
+                    <img src="/images/recurring.svg" alt="">
+                    Recurring Purchase
+                </a>
+            </h1>
+        </div>
     </header>
-    <p>Hello</p>
 
-    
-</main>
+    <main class="container">
+        <section>
+            <h2>What is this?</h2>
+            <p>This is an open-source project which you can use to spread your investment in Bitcoin over a period of time. Select how much you want to spend each month and make automated purchases daily, weekly, or monthly!</p>
+        </section>
 
+        <section>
+            <h2>What you'll need</h2>
+            <ul>
+                <li>An account on  <a href="https://buycoins.africa/">BuyCoins</a>, with access to the API (see below)</li>
+                <li>A <a href="https://heroku.com">Heroku</a> account</li>
+                <li>A <a href="https://github.com">GitHub</a> account (optional, but will make it easier to copy this project)</li>
+            </ul>
+        </section>
 
-<script src="/js/script.js"></script>
+        <section>
+            <h2>Steps</h2>
 
+            <details>
+                <summary>1. Get access to the BuyCoins API</summary>
+                <div>
+                    <p>You'll need to have access to the BuyCoins API in order to make automatic purchases. To apply for access, send an email to <a href="support@buycoins.africa">support@buycoins.africa</a></p>
+                    <p>Once you have access, go to the <a href="https://buycoins.africa/settings/api">API Settings</a> page and copy your public and secret keys.</p>
+                </div>
+            </details>
+
+            <details>
+                <summary>2. Decide how much you want to purchase monthly</summary>
+                <div>
+                    <p>...</p>
+                </div>
+            </details>
+
+            <details>
+                <summary>2. Fork this repository</summary>
+                <div>
+                    <p>...</p>
+                </div>
+            </details>
+        </section>
+    </main>
 </body>
 </html>
