--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,36 +1,144 @@
 html {
     font-size: 62.5%;
 }
-body {
-    font-size: 1.6rem;
-    line-height: 1.6;
-    font-family: 'Inconsolata', monospace;
-    text-align: center;
-    color: rgb(50,50,50);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+body {
+    font-family: 'Inter', sans-serif;
+    font-size: 1.5rem;
+    line-height: 1.4;
+    font-weight: 300;
+    background-color: #f2f5f8;
+    color: rgb(50,50,50);
 }
 
-h1,
-a {
+/* Typography */
+
+h1 {
     color: #000;
-    font-weight: 700;
+    font-weight: 500;
+}
+
+h1 a {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+h1 img {
+    width: 25px;
+    height: auto;
+    margin-right: 10px;
+}
+
+h2 {
+    color: #000;
+    font-weight: 500;
+    font-size: 1.8rem;
+    margin-bottom: 10px;
+}
+
+p {
+    display: block;
+    margin-bottom: 0.5em;
+}
+
+a {
+    text-decoration: none;
+    color: #966FDB;
+}
+
+/* Layout */
+
+.container {
+    width: 90%;
+    max-width: 700px;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+header {
+    background-color: #fff;
+    padding: 20px 0;
+}
+
+header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 main {
-    width: 90%;
-    max-width: 400px;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
-.img {
-    display: inline-block;
-    width: 100%;
-    max-width: 200px;
+header {
+    margin-bottom: 30px;
 }
 
-img {
+section {
+    margin-bottom: 40px;
+}
+
+/* Table */
+
+table {
+
+    background-color: #fff;
+
+
+    border: 1px solid #ececec;
     width: 100%;
+    text-align: left;
+
+}
+
+table thead {
+    border-bottom: 1px solid #ececec;
+}
+
+table td {
+    text-align: left;
+}
+
+table th,
+table td {
+    padding: 10px;
+}
+
+table th:first-of-type,
+table td:first-of-type {
+    padding-left: 20px;
+}
+
+table th:last-of-type,
+table td:last-of-type {
+    padding-right: 20px;
+}
+
+table tr.footer {
+    background-color: #f2f5f8;
+    font-weight: 500;
+}
+
+
+/* Other */
+
+details {
+    margin-bottom: 10px;
+}
+
+details summary {
+    margin-bottom: 10px;
+}
+
+details > div {
+    padding-left: 15px;
+    margin-bottom: 30px;
+}
+
+
+ul {
+    list-style-type: disc;
+    list-style-position: inside;
 }
