--- a/views/index.html
+++ b/views/index.html
@@ -3,36 +3,43 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Buycoins Recurring Purchase</title>
+    <title>BuyCoins Recurring Buy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/css/reset.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-
-<main>
     <header>
-        <h1>Buycoins Recurring Purchase</h1>
-        <a href="/setup">Want to start your own?</a>
+        <div class="container">
+            <h1>
+                <a href="/">
+                    <img src="/images/recurring.svg" alt="">
+                    Recurring Purchase
+                </a>
+            </h1>
+            <a href="/setup">About</a>
+        </div>
     </header>
-    <table>
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Amount</th>
-                <th>Cost</th>
-            </tr>
-        </thead>
-        <tbody>
 
-        </tbody>
-    </table>
-</main>
-
+    <main class="container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Date</th>
+                    <th>BTC Amount</th>
+                    <th>NGNT Cost</th>
+                    <th>Price per BTC</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
+            </tbody>
+        </table>
+    </main>
 
 <script src="/js/script.js"></script>
-
 </body>
 </html>
