Update purchase -> buy

--- a/views/setup.html
+++ b/views/setup.html
@@ -18,7 +18,7 @@
             <h1>
                 <a href="/">
                     <img src="/images/recurring.svg" alt="">
-                    Recurring Purchase
+                    Recurring Buy
                 </a>
             </h1>
         </div>
@@ -51,7 +51,7 @@
             </details>
 
             <details>
-                <summary>2. Decide how much you want to purchase monthly</summary>
+                <summary>2. Decide how much you want to buy monthly</summary>
                 <div>
                     <p>...</p>
                 </div>
