--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
             <h1>
                 <a href="/">
                     <img src="/images/recurring.svg" alt="">
-                    Recurring Purchase
+                    Recurring Buy
                 </a>
             </h1>
             <a href="/setup">About</a>
