--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,10 @@ section {
     margin-bottom: 40px;
 }
 
+p img {
+    margin: 1em 0;
+}
+
 /* Table */
 
 table {
@@ -129,7 +133,9 @@ details {
 }
 
 details summary {
-    margin-bottom: 10px;
+    margin-bottom: 1em;
+    font-weight: 500;
+    cursor: pointer;
 }
 
 details > div {
