small formating updates

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,6 +47,14 @@ a {
     color: #966FDB;
 }
 
+code {
+    background-color: #fff;
+    border: 1px solid #ececec;
+    padding: 0 0.3em;
+
+
+}
+
 /* Layout */
 
 .container {
