--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,8 @@
+:root {
+    --color-primary: #966FDB;
+}
+
+
 html {
     font-size: 62.5%;
 }
@@ -31,10 +36,34 @@ h1 img {
 }
 
 h2 {
-    color: #000;
+    color: #fff;
     font-weight: 500;
     font-size: 1.8rem;
     margin-bottom: 10px;
+    position: relative;
+    display: inline-block;
+    text-transform: lowercase;
+}
+
+h3 {
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.5rem;
+    position: relative;
+    display: inline-block;
+    text-transform: lowercase;
+}
+
+h2::before,
+h3::before {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1em;
+    background-color: var(--color-primary);;
 }
 
 p {
@@ -44,7 +73,7 @@ p {
 
 a {
     text-decoration: none;
-    color: #966FDB;
+    color: var(--color-primary);
 }
 
 code {
@@ -76,8 +105,15 @@ header .container {
 }
 
 main {
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+@media (min-width: 700px) {
+    main {
+        margin-top: 100px;
+        margin-bottom: 100px;
+    }
 }
 
 header {
@@ -131,6 +167,25 @@ table td:last-of-type {
 table tr.footer {
     background-color: #f2f5f8;
     font-weight: 500;
+}
+
+/* Form */
+
+form {
+    margin: 1em 0 2em;
+}
+
+form label {
+    display: block;
+    font-weight: 500;
+    margin-bottom: 0.5em;
+}
+
+form input,
+form button {
+    height: 50px;
+    font-weight: 300;
+    padding: 0 1em;
 }
 
 
