--- a/views/setup.ejs
+++ b/views/setup.ejs
@@ -153,14 +153,14 @@
             <details>
                 <summary>5. Setup Heroku Scheduler</summary>
                 <div>
-                    <p>Under your Heroku project "Resources" tab, click the Heroku Scheduler Add-on.</p>
-                    <p>Next, create a new job using the following settings":</p>
+                    <p>Finally, go to your Heroku project "Resources" tab and click the Heroku Scheduler Add-on.</p>
+                    <p>Next, create a new job using the following settings:</p>
                     <ul>
                         <li>Schedule: Every day at.. (any time of your choosing)</li>
                         <li>Run Command: <code>recurringBuy</code></li>
                     </ul>
                     <p><img src="/images/heroku-scheduler.png" alt=""></p>
-                    <p>Note: Make sure the job is set to run every day, regardless of your <code>BUY_FREQUENCY</code></p>
+                    <p>Note: Make sure the job is set to run every day, regardless of your <code>BUY_FREQUENCY</code>.</p>
                 </div>
             </details>
         </section>
